string english fixes and screenshoots upload

--- a/creditcardguide/src/main/res/values-pt/strings.xml
+++ b/creditcardguide/src/main/res/values-pt/strings.xml
@@ -8,7 +8,7 @@
     <string name="elo">Elo</string>
     <string name="hipercard">Hipercard</string>
     <string name="redecardcredito">MasterCard</string>
-    <string name="visacredito">Visa Crédito</string>
+    <string name="visacredito">Visa</string>
     <string name="visaelectron">Visa Electron</string>
     <string name="other">Outro</string>
 
